@@ -29,6 +29,24 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|url
+operator|.
+name|URLHandler
+operator|.
+name|URLInfo
+import|;
+end_import
+
+begin_import
+import|import
 name|junit
 operator|.
 name|framework
@@ -89,6 +107,45 @@ argument_list|(
 literal|"http://www.google.fr/unknownpage.html"
 argument_list|)
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testGetURLInfo
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// IVY-390
+name|URLHandler
+name|handler
+init|=
+operator|new
+name|HttpClientHandler
+argument_list|()
+decl_stmt|;
+name|URLInfo
+name|info
+init|=
+name|handler
+operator|.
+name|getURLInfo
+argument_list|(
+operator|new
+name|URL
+argument_list|(
+literal|"http://repo1.maven.org/maven2/commons-lang/commons-lang/[1.0,3.0[/commons-lang-[1.0,3.0[.pom"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|URLHandler
+operator|.
+name|UNAVAILABLE
+argument_list|,
+name|info
 argument_list|)
 expr_stmt|;
 block|}
